--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "lodash": "^4.17.15",
+    "random-id": "^1.0.3",
+    "rc-checkbox": "^2.1.7",
     "react": "^16.8.6",
+    "react-checkbox-group": "^5.0.2",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1"
   },
